update documentation for ignasr